--- a/natasha/app.css
+++ b/natasha/app.css
@@ -2061,248 +2061,6 @@ footer .copyright {
   background-color: var(--dark-two);
 }
 
-.search-filters .rc-slider-rail {
-  height: 15px;
-  border-radius: 10px;
-  background-color: var(--light);
-  margin-left: -5px;
-  margin-right: -5px;
-  width: 104%;
-}
-
-.search-filters .rc-slider-handle {
-  margin-top: auto;
-  border: 1px solid var(--steel);
-  width: 15px;
-  height: 15px;
-}
-
-.search-filters .rc-slider-track {
-  height: 15px;
-  border-radius: 0px;
-  background-color: var(--steel);
-}
-
-.search-filters .dropdown-menu {
-  left: auto;
-  padding: 0px;
-  margin: auto;
-  margin-top: 0.125rem;
-  border: 0px;
-  background-color: transparent;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-  border-radius: 0.25rem;
-}
-
-.search-filters .dropdown-menu .dropdown-form {
-  padding: 1rem 1.5rem;
-  background-color: var(--pale-grey-three);
-  border-top-right-radius: 0.25rem;
-  border-top-left-radius: 0.25rem;
-  min-width: 260px;
-}
-
-.search-filters .dropdown-form label,
-.search-filters .dropdown-form .label {
-  font-size: 1.2rem;
-  font-weight: normal;
-  color: black;
-}
-
-.search-filters .dropdown-form .form-check-input {
-  margin-top: 0.4rem;
-  margin-left: -1.4rem;
-}
-
-.search-filters .two-column-container {
-  width: 660px;
-}
-
-.search-filters .three-column-container {
-  width: 990px;
-}
-
-.search-filters .limit-checkbox-two-columns {
-  width: 50%;
-}
-
-.search-filters .limit-checkbox-three-columns {
-  width: 33%;
-}
-
-.search-filters .price-filter {
-  margin-left: -0.4rem;
-  margin-right: -0.4rem;
-  padding-bottom: 0.5rem;
-  min-width: 300px;
-}
-
-.search-filters .price-filter-amount {
-  font-weight: normal;
-  font-size: 1.1rem;
-  width: 70px;
-  height: 40px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-top-left-radius: 0.25rem;
-  text-align: center;
-  line-height: 2.5rem;
-  -ms-border-bottom-left-radius: 0.25rem;
-  -moz-border-bottom-left-radius: 0.25rem;
-  -webkit-border-bottom-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.search-filters .price-filter-dash {
-  text-align: center;
-  line-height: 2.5rem;
-}
-
-.search-filters .price-filter-currency {
-  font-weight: normal;
-  font-size: 0.875rem;
-  color: var(--dusk);
-  width: 65px;
-  height: 40px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
-  border-right: 1px solid rgba(0, 0, 0, 0.15);
-  border-top-right-radius: 0.25rem;
-  background-color: var(--pale-grey-two);
-  text-align: center;
-  line-height: 2.5rem;
-  white-space: nowrap;
-  -ms-border-bottom-right-radius: 0.25rem;
-  -moz-border-bottom-right-radius: 0.25rem;
-  -webkit-border-bottom-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-}
-
-.search-filters .price-slider-amount {
-  font-size: 0.875rem;
-  color: #000f;
-  font-weight: normal;
-}
-
-.search-filters .dropdown-form input[type="checkbox"] {
-  -ms-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-}
-
-.search-filters a.dropdown-button {
-  width: 100%;
-  background-color: var(--pale-grey-two);
-  text-align: center;
-  color: var(--clear-blue);
-  line-height: 50px;
-  font-weight: normal;
-  font-size: 1.1rem;
-  cursor: pointer;
-  -ms-border-bottom-left-radius: 0.25rem;
-  -moz-border-bottom-left-radius: 0.25rem;
-  -webkit-border-bottom-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-  -ms-border-bottom-right-radius: 0.25rem;
-  -moz-border-bottom-right-radius: 0.25rem;
-  -webkit-border-bottom-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-}
-
-.search-filters a.dropdown-button:hover {
-  background-color: var(--pale-grey-two-darker);
-  color: var(--clear-blue);
-}
-
-.search-filters a.dropdown-button-left {
-  width: 50%;
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
-  border-right: 1px solid rgba(0, 0, 0, 0.15);
-  -ms-border-bottom-right-radius: 0px;
-  -moz-border-bottom-right-radius: 0px;
-  -webkit-border-bottom-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-}
-
-.search-filters a.dropdown-button-right {
-  width: 50%;
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
-  -ms-border-bottom-left-radius: 0px;
-  -moz-border-bottom-left-radius: 0px;
-  -webkit-border-bottom-left-radius: 0px;
-  border-bottom-left-radius: 0px;
-}
-
-.search-filters .rc-slider-rail {
-  height: 15px;
-  border-radius: 10px;
-  background-color: var(--light);
-  margin-left: -5px;
-  margin-right: -5px;
-  width: 104%;
-}
-
-.search-filters .rc-slider-handle {
-  margin-top: auto;
-  border: 1px solid var(--steel);
-  width: 15px;
-  height: 15px;
-}
-
-.search-filters .rc-slider-track {
-  height: 15px;
-  border-radius: 0px;
-  background-color: var(--steel);
-}
-
-.search-filters .date-readonly-input {
-  color: var(--bluey-grey);
-  font-size: 1rem;
-  background-color: var(--pale-grey-four);
-  border: solid 1px var(--light);
-  border-radius: 5px;
-  max-width: 130px;
-  padding: 0.6rem 0.7rem;
-}
-
-.search-filters .CalendarMonth_caption,
-.search-filters .CalendarDay__default {
-  color: var(--dark);
-  font-weight: normal;
-}
-
-.search-filters .DayPickerNavigation_button__horizontalDefault {
-  border-radius: 5px;
-}
-
-.search-filters .DayPicker_transitionContainer {
-  border-radius: 5px;
-  border: 1px solid --var(--light);
-}
-
-.search-filters .CalendarDay__selected,
-.search-filters .CalendarDay__selected:active,
-.search-filters .CalendarDay__selected:hover {
-  background-color: var(--dusk);
-  border: 1px solid var(--dusk);
-}
-
-.CalendarDay__selected_span:active,
-.CalendarDay__selected_span:hover {
-  border-color: var(--light-dusk);
-}
-
-.search-filters .CalendarDay__hovered_span,
-.search-filters .CalendarDay__hovered_span:hover {
-  border: 1px solid var(--dusk);
-  background-color: var(--light-dusk);
-}
-
-.search-filters .CalendarDay__selected_span {
-  background-color: var(--light-dusk);
-  border: 1px solid var(--dusk);
-}
-
 .search-bar {
   padding: 0.7rem 0;
   box-shadow: 0 1px 0 0 var(--light);
@@ -2339,39 +2097,6 @@ footer .copyright {
   border-color: var(--dusk);
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.navbar.filter-group ul {
-  padding-top: 4px;
-}
-
-.navbar.filter-group .container .navbar-nav {
-  border-bottom: 1px solid var(--light);
-}
-
-.navbar.filter-group .navbar-nav .nav-item > a {
-  font-size: 0.875rem;
-  color: var(--dark);
-  padding: 0.09rem 0.40rem;
-  margin: 0.12rem 0.30rem;
-  font-weight: normal;
-  white-space: nowrap;
-  overflow: hidden;
-  border-radius: 4px;
-}
-
-.navbar.filter-group .navbar-nav .nav-item > a:hover {
-  background-color: var(--pale-grey-three);
-  cursor: pointer;
-}
-
-.navbar.filter-group .navbar-nav .nav-item.show > a {
-  border: 0.06rem solid var(--dusk);
-  padding: 0.03rem 0.34rem;
-}
-
-.navbar.filter-group {
-  background-color: var(--white) !important;
 }
 
 .listing-card {
@@ -4702,6 +4427,139 @@ footer .copyright {
   }
 }
 
+.message {
+  margin: 10px 0 20px 0;
+  width: 100%;
+  -ms-flex: 1 0 auto;
+  -moz-flex: 1 0 auto;
+  -webkit-flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+
+.message .message-container {
+  max-width: 70%;
+}
+
+.message .avatar-container .avatar {
+  height: 60px;
+  width: 60px;
+  display: inline-block;
+  vertical-align: bottom;
+}
+
+.message .avatar-container {
+  display: inline;
+}
+
+.message.content-only {
+  margin-bottom: 0;
+}
+
+.message.counterparty.content-only {
+  margin-left: 60px;
+}
+
+.message.counterparty .account,
+.message.counterparty .name {
+  color: var(--dark-blue-grey);
+}
+
+.message.user.content-only {
+  margin-right: 60px;
+}
+
+.message.user .account,
+.message.user .name {
+  color: white;
+}
+
+.message .bubble .top .name {
+  font-weight: normal;
+  margin-right: 0.5rem;
+}
+
+.message .bubble .top .account {
+  max-width: 6rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.message .bubble .top {
+  font-size: 14px;
+  display: flex;
+}
+
+.message .bubble .content .image-container {
+  overflow: auto;
+}
+
+.message .bubble .content {
+  font-weight: normal;
+  font-size: 16px;
+}
+
+.message .bubble.tail::after {
+  content: '';
+  bottom: 8px;
+  left: -34px;
+  position: absolute;
+  border: 0px solid;
+  display: block;
+  width: 38px;
+  height: 26px;
+  background-color: transparent;
+  box-shadow: 10px 11px 0px -3px var(--pale-grey);
+  -ms-border-bottom-left-radius: 50%;
+  -moz-border-bottom-left-radius: 50%;
+  -webkit-border-bottom-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  -ms-border-bottom-right-radius: 50%;
+  -moz-border-bottom-right-radius: 50%;
+  -webkit-border-bottom-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  -ms-transform: rotate(-42deg);
+  -moz-transform: rotate(-42deg);
+  -webkit-transform: rotate(-42deg);
+  transform: rotate(-42deg);
+}
+
+.message .bubble {
+  display: inline-block;
+  margin-left: 1.75rem;
+  padding: 1rem;
+  background-color: var(--pale-grey);
+  border-radius: 1rem;
+  position: relative;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.message.user .bubble.tail::after {
+  right: -34px;
+  left: auto;
+  box-shadow: -10px 11px 0px -3px var(--clear-blue);
+  -ms-transform: rotate(42deg);
+  -moz-transform: rotate(42deg);
+  -webkit-transform: rotate(42deg);
+  transform: rotate(42deg);
+}
+
+.message.user .bubble {
+  background-color: var(--clear-blue);
+  color: var(--white);
+  margin-right: 1.5rem;
+}
+
+.message.user {
+  align-self: flex-end;
+  -ms-flex-direction: row-reverse;
+  -moz-flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+
 .send-message {
   border-top: 1px solid var(--pale-grey);
   padding-top: 1rem;
@@ -4881,101 +4739,6 @@ footer .copyright {
   font-size: 12px;
   align-self: center;
   margin-bottom: 1rem;
-}
-
-.messages-page .messages .message .avatar {
-  height: 60px;
-  width: 60px;
-  display: inline-block;
-  vertical-align: bottom;
-}
-
-.messages-page .messages .message .bubble .top .name {
-  font-weight: normal;
-  margin-right: 0.5rem;
-}
-
-.messages-page .messages .message .bubble .top .account {
-  max-width: 6rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.messages-page .messages .message .bubble .top {
-  font-size: 14px;
-  display: flex;
-}
-
-.messages-page .messages .message .bubble .content {
-  font-weight: normal;
-  font-size: 16px;
-}
-
-.messages-page .messages .message .bubble::after {
-  content: '';
-  bottom: 8px;
-  left: -34px;
-  position: absolute;
-  border: 0px solid;
-  display: block;
-  width: 38px;
-  height: 26px;
-  background-color: transparent;
-  box-shadow: 10px 11px 0px -3px var(--pale-grey);
-  -ms-border-bottom-left-radius: 50%;
-  -moz-border-bottom-left-radius: 50%;
-  -webkit-border-bottom-left-radius: 50%;
-  border-bottom-left-radius: 50%;
-  -ms-border-bottom-right-radius: 50%;
-  -moz-border-bottom-right-radius: 50%;
-  -webkit-border-bottom-right-radius: 50%;
-  border-bottom-right-radius: 50%;
-  -ms-transform: rotate(-42deg);
-  -moz-transform: rotate(-42deg);
-  -webkit-transform: rotate(-42deg);
-  transform: rotate(-42deg);
-}
-
-.messages-page .messages .message .bubble {
-  display: inline-block;
-  margin-left: 1.75rem;
-  padding: 1rem;
-  background-color: var(--pale-grey);
-  border-radius: 1rem;
-  position: relative;
-  max-width: 70%;
-  -ms-flex: 1;
-  -moz-flex: 1;
-  -webkit-flex: 1;
-  flex: 1;
-}
-
-.messages-page .messages .message.user .bubble::after {
-  right: -34px;
-  left: auto;
-  box-shadow: -10px 11px 0px -3px var(--clear-blue);
-  -ms-transform: rotate(42deg);
-  -moz-transform: rotate(42deg);
-  -webkit-transform: rotate(42deg);
-  transform: rotate(42deg);
-}
-
-.messages-page .messages .message.user .bubble {
-  background-color: var(--clear-blue);
-  color: var(--white);
-  margin-right: 1.5rem;
-}
-
-.messages-page .messages .message.user {
-  align-self: flex-end;
-  -ms-flex-direction: row-reverse;
-  -moz-flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-}
-
-.messages-page .messages .message {
-  margin: 20px 0;
 }
 
 .messages-page {
